# Aegisrlib

./: Cargo.toml  README.md
.github/workflows/: build-test.yml
benches/: aegisrlib_bench.rs
src/: commands.rs  constant.rs  core.rs  crypto.rs  file_system.rs  lib.rs  memory_engine.rs
tests/: e2e_test.rs
