[package]
name = "aegisrlib"
version = "1.0.0"
edition = "2024"
authors = ["Surelle"]
description = "Aegisr"
license = "MIT"

[[bench]]
name = "aegisrlib_bench"
harness = false

[dependencies]
colored = "3.0.0"
figlet-rs = "0.1.5"
reqwest = "0.12.24"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1", features = ["full", "macros"] }
dirs-next = "2.0"
base64 = "0.22.1"
rand = "0.9.2"
blake3 = "1.8.2"
rand_core = "0.9.3"
zeroize = "1.8.2"
once_cell = "1.21.3"
uuid = { version = "1.18.1", features = ["v4"] }
clap = { version = "4.5.51", features = ["derive"] }
aes-gcm = "0.10.3"

[dev-dependencies]
criterion = "0.5"